Pass in data to index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,5 +4,9 @@
 </head>
 <body>
 Begin here (or replace this with any static code already written).
+
+{{randomNumber}}
+{{tryingthis}}
 </body>
 </html>
+
