--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,11 +8,9 @@
 
 
 <body>
-<<<<<<< Updated upstream
 Begin here (or replace this with any static code already written).
 </body>
 </html>
-=======
 <center>
 <h1>Random n-Digit Number Generator</h1>
 <p style="font-size:5vw;" id="numberHolder"> {{randomNumber}} <br> </p>
@@ -25,6 +23,9 @@ Digits: <input type="text" id="numDigits" value="6">
 </html>
 
 <script>
+	// form validation; only numbers in the text box
+	// fix python 6 digits
+	//learn nodemon commands
 	function reroll() {
 		console.log("Hello world");
 		// Create new number in javascript
@@ -36,4 +37,3 @@ Digits: <input type="text" id="numDigits" value="6">
 	}
 </script>
 
->>>>>>> Stashed changes
